--- a/AlamirMobileCDMA/update.resx
+++ b/AlamirMobileCDMA/update.resx
@@ -117,4 +117,60 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="bunifuCircleProgressbar1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAJEAAACRCAYAAADD2FojAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAoOSURBVHhe7Z0vcNxGFMYDy1I705k2d53rTKS0sDCwMLAw
+        sLAwMNDsYGBgYWCgoWGgoaGhYWFh+77Vu8bRvtWdTrvS7ur7zbzJTCSvdNqn93clPSGEEEIIIYQQQggh
+        ZO3sdrtvnm1e/Haxbd9cbNoryOW2/SByMyQX2+av//f/sf0DYzzd7b7VYUmtPPvh5S+Xm+atyEenCJv2
+        H/n33wQiYzefRN7JsV7p4UmJPN39/NPF8+ZPKI0ozIMx2bMIlBVKBQV++rz9VU+P5Mp3u933sADibu6s
+        Cc1BVKH3sIx62iQHuphG7nZj0nIWOe/PsJaMpxbCWZ1t+/5y0/5tTdCpgomUMa4RJDvZvniNQPmYOIuH
+        wFpjrP64YwQuD+PQ3c2Ei3W67OicwBgB9RWUAOPokNGARcHYiH+6OGi8guPvMIYOSWKCu3S8y2pu5d89
+        rAvSeR1qVkShXsFqwdr55zcoN8+2L3/XYcgU4LbUZVgX2pDmHtYmhaWZCiwVYiDnQs1z9wX7MgifANzC
+        SS5B9oGLK8kNuLqVWEkovfd7bNkzAB8BXIC6IutifpFOwfawVvqnRYKq9yllCbGwD3RxR0DcIhdL7k77
+        Ih4EF7NzWXXdmVCQU24exIa0SgZd1nUkVoDlERe3VJA8F6pMR9ycbGdb5Qvuoh2JfRDzlO62xnCwymJx
+        g6UMt01uKv2TdYIL5QqGxgU6CGKFNddNusbxcHlgte4NP1ouwGClF/UV3X31IPgettbNfY5ljWS42s9g
+        AEl/b3EsbkTCsYrWCS7EUNDIzGOYoxmsWKuq3T/ukpBJZpA4DrRyhq6lWKw3ums9DClQ9XdPItw1HbLq
+        NSmSc2Hhu2YdfjwRXZxkV7s7i/Tite5aLhpEB+6WlWUUiegyXTtRgSIVfZMO/Tj8/5qKh6lx1zpUTxIv
+        UOTNqllEoA7U3FOB4uOuebAwWeA1D1WiXQxEF5aMYevf3uhu+dM1EI0fAbPKIDo5qkhmHCo38ZXuli+h
+        TAwBHtP4+XDzEFCkrOdBG6p2WZ6FxNmBslhzgZAi2/goHAc1n3QXMjNwX9aciOQXH6FhapyoCGpB7IUt
+        icyDnSXn5B26dN7PCBAHsRu/PHBdcGH9+UHsmo1bg0Z7JyjC9UD5EIqPZO4+6i7LoVpuLOFsbnUXkglQ
+        GH+eMsjWEDRbJ0Y3lh+44c3yy7a5Q0iiu80LFKV/QiofdBeSGaHQA/+vu8yLZYWyrkEQRyAJepjdGnUL
+        or4+EScsKmZPNnMXskKL+VYyCjuWnTEZCmZktELFELJGaJ7rLmmx2hu0QuWxmDWColhWSP4v/yUG5CsG
+        YqO05Rn3JKZ30IzK52QUgTpf2hKNHMBr5sG96WZSGDJ3b/rzCaOQLDTpFjr1DugOyup0qUBZrCp2sgAb
+        cU//YCiZ62ZSKHhtjzev4uZ0c1wkcveWW8rB2KkvHKvDj+Qp+jqwUCTPgLoOUKLx5leSKN0cBxQSvYOU
+        9AgKGcSs/Ymb081xsFJB1obqwX7Mq7nXzXEwI/icHz0ho+ieVft6fiHRHjRFCu8dIGUtgSyCzKu/oD9W
+        XGSm9qlSQLIYSefZiofYsa8PezF/pLjIfIkSq9TV4arX/XkWiRK2oPDUH5gPJNaJVS+a/JUjs18mQbVu
+        JpUhc+u932hyH829pbQ36MW2/aybSWXI/H7w5ntqa8t9Frw/aOxKJsmGQGdi2voieyksm661YnkekWnt
+        LWuZQPTGHMkGe83YxHXXYt6857ereDcyMQko0bRakQzilcLZM6sXq4eGtF83n4cM4vdTWGisGm++RXTT
+        eVirGaN1dkmW9OcbopvOg0q0PqLPuVUGpxLVTXQloiVaH1avdFITFi2O/oBYtK+bSYX05xuim85DBmCK
+        vzL68z254W4tSKMS1QtClf58I6TRzedhPh1Z4/dFicNSIixK1M3nIYN4SwO4NLZeAg+pTmvAWksD0NnX
+        zaQyrKU/6J/q5vMwH2rbtNe6mVSGzK/3zX1J+ac9pIr1tf1BJwdaJFusRGpyDJz0CQCSHcme7DGr1iw4
+        VolVrY7yZI/1BABXN9aHmZnFerLHXGfNxfrVYWXiInFeHzTLa0fI4phBdazXByV/7QjJAriu/hxHbXFZ
+        3XzGRfUQioeiZuEwa/2DMC6qB7MzEeu1MgfM147E1lSyGDKf1gMZcXukUBarhsCOfvnYyz8kHpr6NhAL
+        c1lIbJNHZkfm8F1/XiX7TvO1IculwTrxXdZlY7U6oFi6OT5WCyS67ySzgb6YN58iSQ2DlaUlM30kOVY3
+        Am0u3ZyGYBCW6qs0JBnBz7DOUf+TAxnpIBeqlYbZExWlmqVsY/fSuDykJEJWCIqlu6QHcZB3Akz3iyFk
+        hWbNtGmNyiULK3TAskbM1PLHLhovVO8LLGJi3ShjQnWhRawQcP00c2E3P3GeI5gvO5ZduOtgdvdxYlwm
+        kh1Zew45Ce8NsxC++CEfQsE0LFMWy3lwgnBhxgne80MyeSDz4ReIITm9xDVkKlk7Wh6xQEa/M9OQQyJ8
+        fx02hNnaYgRj1k37kGXy45qzhltzvpjvvp4djYP8792LZB2vhirZXXzER4zmokvn7TgI7k13yxerL9NJ
+        c8tAex6wqsKeg0hPtKamK0La8RH+P4uUsmKstoa79rnGQSFC8ZETuUuoSGmQ6+u9pAqCuLTIuh06+i6o
+        tn4UK9rRQaxjXWuIeIByH+3Ct9GGFIkWKQ5yPU0L5KSGEgvuAvPHQejaJhOKgVT2ulv5hCraEATbzNrG
+        4xIY43UwB6kyZLCftDxIc5vksd1K0df92P0wkapjTjyOYv1oiIud+LqaoyDLkmtlVqJV6nFhIYaCbQju
+        Iro3m6EMzMma+pTupUqhOpKIKNIdF/1/wS23GXJfa7XiiIGgLNZFeST7tWdvLikZuuHEta16AaDLMIZT
+        1O4irfAxbax8QMJhXZNHclNUKyMlMMVDcZKTTXu9hpUAmnn5X3fqCeIj/RNy4BT3BkW72Lbva7z7oDxQ
+        jCHXBXGWec3u6xhwb3Kh9sesUqdMyOLKt0ynKg8Ev5nu60T060bBbOSx4MKWeGfqb9yfqDx3tD5ngr4b
+        zLd1YX1xb3Hb51z5hhXpPkx3NGB24izupnnH/uJExpj7g+DOdW2WDNZ2u1gPihNebWgKXVcCDsp0umXq
+        RO/mT6i3zFHAdAvykG2KEpx1rpI4cD16YlzwLQoxdoIeC1YOQLFkjCu4zHOUCxYG9atuDFfruoES9I91
+        ihyUh5ZnAaAAolDmY9xTRRUCwf3NGFc6Rpwyi6uDldWfRJbCuTqZDEyKNVl5SXMP60WXlTEuJnHuDnFQ
+        GgtyhsDVXbGpXCjI0FymdmLdKYaoRdxj2QvT8wqB63MLu+D+xDpo6i0KZnwtICDydwjqXbzUjdG8xZh0
+        UcQDigGhNSGEEEIIIYQQkjNPnvwHLCSht+gyXAcAAAAASUVORK5CYII=
+</value>
+  </data>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>204</value>
+  </metadata>
 </root>
